--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "eslint-config-dzhurley",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "dzhurley's base eslint ruleset",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/dzhurley/eslint-config-dzhurley.git"
+  },
+  "peerDependencies": {
+      "eslint": ">= 3"
   },
   "keywords": [
     "eslint",
